0.10.x/_sources/api/skimage.color.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`color`
====================
.. automodule:: skimage.color

.. currentmodule:: skimage.color
.. autosummary::

   skimage.color.combine_stains
   skimage.color.convert_colorspace
   skimage.color.deltaE_cie76
   skimage.color.deltaE_ciede2000
   skimage.color.deltaE_ciede94
   skimage.color.deltaE_cmc
   skimage.color.gray2rgb
   skimage.color.guess_spatial_dimensions
   skimage.color.hed2rgb
   skimage.color.hsv2rgb
   skimage.color.lab2lch
   skimage.color.lab2rgb
   skimage.color.lab2xyz
   skimage.color.label2rgb
   skimage.color.lch2lab
   skimage.color.luv2rgb
   skimage.color.luv2xyz
   skimage.color.rgb2gray
   skimage.color.rgb2grey
   skimage.color.rgb2hed
   skimage.color.rgb2hsv
   skimage.color.rgb2lab
   skimage.color.rgb2luv
   skimage.color.rgb2rgbcie
   skimage.color.rgb2xyz
   skimage.color.rgbcie2rgb
   skimage.color.separate_stains
   skimage.color.xyz2lab
   skimage.color.xyz2luv
   skimage.color.xyz2rgb

combine_stains
--------------

.. autofunction:: skimage.color.combine_stains

convert_colorspace
------------------

.. autofunction:: skimage.color.convert_colorspace

deltaE_cie76
------------

.. autofunction:: skimage.color.deltaE_cie76

deltaE_ciede2000
----------------

.. autofunction:: skimage.color.deltaE_ciede2000

deltaE_ciede94
--------------

.. autofunction:: skimage.color.deltaE_ciede94

deltaE_cmc
----------

.. autofunction:: skimage.color.deltaE_cmc

gray2rgb
--------

.. autofunction:: skimage.color.gray2rgb

guess_spatial_dimensions
------------------------

.. autofunction:: skimage.color.guess_spatial_dimensions

hed2rgb
-------

.. autofunction:: skimage.color.hed2rgb

hsv2rgb
-------

.. autofunction:: skimage.color.hsv2rgb

lab2lch
-------

.. autofunction:: skimage.color.lab2lch

lab2rgb
-------

.. autofunction:: skimage.color.lab2rgb

lab2xyz
-------

.. autofunction:: skimage.color.lab2xyz

label2rgb
---------

.. autofunction:: skimage.color.label2rgb

lch2lab
-------

.. autofunction:: skimage.color.lch2lab

luv2rgb
-------

.. autofunction:: skimage.color.luv2rgb

luv2xyz
-------

.. autofunction:: skimage.color.luv2xyz

rgb2gray
--------

.. autofunction:: skimage.color.rgb2gray

rgb2grey
--------

.. autofunction:: skimage.color.rgb2grey

rgb2hed
-------

.. autofunction:: skimage.color.rgb2hed

rgb2hsv
-------

.. autofunction:: skimage.color.rgb2hsv

rgb2lab
-------

.. autofunction:: skimage.color.rgb2lab

rgb2luv
-------

.. autofunction:: skimage.color.rgb2luv

rgb2rgbcie
----------

.. autofunction:: skimage.color.rgb2rgbcie

rgb2xyz
-------

.. autofunction:: skimage.color.rgb2xyz

rgbcie2rgb
----------

.. autofunction:: skimage.color.rgbcie2rgb

separate_stains
---------------

.. autofunction:: skimage.color.separate_stains

xyz2lab
-------

.. autofunction:: skimage.color.xyz2lab

xyz2luv
-------

.. autofunction:: skimage.color.xyz2luv

xyz2rgb
-------

.. autofunction:: skimage.color.xyz2rgb

